# Kipcorn

./: CMakeLists.txt  Makefile  README.md  compile_commands.json
include/: kipcorn.h
include/kipcorn/: kipcorn.h
src/: kipcorn.c
